Stops the page feeling cramped by adding some gutter margins

--- a/spotting/static/css/elements.css
+++ b/spotting/static/css/elements.css
@@ -3,6 +3,8 @@ body {
 	max-width: 60rem;
 	margin: auto;
 	margin-top: var(--navigation-bar-height);
+	margin-left: 1.5rem;
+	margin-right: 1.5rem;
 	padding-top: 1rem;
 	font-family: 'Open Sans', Helevetica, Arial, sans-serif;
 	font-size: var(--base-font-size);
